base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homeassistant
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: home-assistant
    meta.helm.sh/release-namespace: homeassistant
