base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ha.digitalinfo.local
    meta.helm.sh/release-name: home-assistant
    meta.helm.sh/release-namespace: homeassistant
  labels:
    app: home-assistant
    app.kubernetes.io/managed-by: Helm
  name: ha-lb-svc
  namespace: homeassistant
spec:
  ports:
  - port: 80
    targetPort: 8123
    protocol: TCP
    name: http
  selector:
    app: home-assistant
  sessionAffinity: None
  type: LoadBalancer
  loadBalancerIP: 192.168.2.222
