base/svc-clusterip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ha-svc
  namespace: homeassistant
spec:
  ports:
  - port: 8123
    targetPort: 8123
    protocol: TCP
    name: http
  selector:
    app: home-assistant
  sessionAffinity: None
  type: ClusterIP
