base/netpol-allow-all-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-egress
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      app: home-assistant
  egress:
  - {}
  policyTypes:
  - Egress
