base/netpol-allow-ingress-namespaces.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: web-allow-external
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      app: home-assistant
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: node-red
    - namespaceSelector:
        matchLabels:
          name: frigate
    - namespaceSelector:
        matchLabels:
          name: mosquitto
    - namespaceSelector:
        matchLabels:
          name: esphome
    - namespaceSelector:
        matchLabels:
          name: zigbee2mqtt
