base/netpol-deny-all-ingress.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-deny-all
  namespace: homeassistant
spec:
  podSelector: {}
  ingress:
  - {}
