base/netpol-ha-allow-external.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ha-allow-external
  namespace: homeassistant
spec:
  podSelector:
    matchLabels:
      app: home-assistant
  ingress:
  - {}
  policyTypes:
  - Ingress
